grass (6.4.0~rc3-3) unstable; urgency=low

  * NOT RELEASED.
  * Fixed debian/watch to see also RC versions. Not perfect but it works.
  * Added xml2 and other r.in.wms related among Suggests in debian/control.
  * Added proj-bin among Suggests in debian/control.
  * Moved build-dep from proj to libproj-dev.
  * Grass-doc section set to doc instead of science.
  * Added a libgdal.so link to the system GDAL shlib, to allow external raster/vector
    support to work.
  * Policy bumped to 3.8.1, without changes.
  * Introduced grassVERSION and grassVERSION-dev Provides and debian/control.in 
    templates to get grass major.minor versions automagically. 
    The new field is useful to introduce per-version dependency in external 
    plugins: mixing fluxes^Wversions is evil, and currently gdal-grass could 
    be installed with the wrong grass release.
  * Now fixscripts.sh get automagically grass version for its paths.
  * Now all debian/ files are templated against grass version, to avoid
    changing paths all around for every new major release.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 27 Mar 2009 14:41:07 +0100

grass (6.4.0~rc3-2) unstable; urgency=low

  * Removed obsolete etc/ld.so.conf.d directory in debian/grass.dirs.
  * Fixed instdir.dpatch for the right include directory in the pkg-config file.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 03 Mar 2009 18:11:23 +0100

grass (6.4.0~rc3-1) unstable; urgency=low

  * New upstream pre-release for next stable. 
    From now on all grass-related directories are versionend to allow people installing
    packaged unofficial/testing versions.
  * Removing Tcl Lenny related code in debian/rules. 
  * Some minor clean-ups in debian/rules.
  * Obsolete NEWS file removed.
  * Removed pre-lenny compatibility build-deps.
  * Debhelper level moved to 7, now using dh_prep.
  * Removed ld.so file installation. Grass programs must be called under Grass environment,